--- a/breed.html
+++ b/breed.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>List of dog breeds</title>
+  <title id="breed"></title>
 
   <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
@@ -13,12 +13,14 @@
 </head>
 
 <body>
-  <div id="root">
-    <!-- <button class="breed"></button> -->
-    <!-- <button class="subbreed"></button> -->
-  </div>
+  <div id="root"></div>
   <script src="functions.js"></script>
-  <script src="index.js"></script>
+  <script src="breed.js"></script>
+  <script>
+    window.onload = function() {
+      breed = capitalize(breed);
+      document.getElementById("breed").innerHTML = breed + " Information";
+    }
+  </script>
 </body>
-
 </html>
